<resources>
    <string name="app_name" translatable="false">FocusZone</string>
    <!-- Strings used for fragments for navigation -->
    <!-- About fragment strings  -->
    <string name="aboutTitle">About FocusZone</string>
    <string name="aboutDescription">FocusZone is a mobile application for Android that aims to help users manage the time they spend on mobile devices. By blocking applications and websites and setting time limits, FocusZone supports building healthy habits and limiting distractions.</string>
    <string name="aboutAdditionalDescription">We hope you would enjoy our app!</string>
    <!-- Add site -->
    <string name="enterAddress">Enter site address</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <!-- Authorization -->
    <string name="authorizationTitle">Authorization Fragment (Change pin, enable biometrics)</string>
    <!-- Blocked Apps -->
    <string name="blockedAppsTitle">Blocked Applications</string>
    <!-- Blocked site  -->
    <string name="blockedSitesTitle">Blocked Sites</string>
    <string name="addSite">Add site</string>
    <!-- Custom message -->
    <string name="customMssgTitle">Custom Message</string>
    <string name="mssgToChange">Message to change</string>
    <string name="apply">Apply</string>
    <!-- Disable blocks -->
    <string name="disableTitle">Disable Blocks Fragment</string>
    <string name="disable_blocks_descr">Disabling locks may reduce the efficiency of the application. Are you sure you want to continue?</string>
    <!-- Edit app -->
    <string name="editAppTitle">Edit Application</string>
    <string name="appEditName">Application Name</string>
    <string name="save">Save</string>
    <!-- Notification -->
    <string name="notificationTitle">Notification</string>
    <string name="okNotification">OK (close app/site)</string>
    <string name="noNotification">I understand (ignore block)</string>
    <string name="contentNotification">App/site usage exceded limit!! (to change)</string>
    <!-- Home -->
    <string name="homeTitle">Home</string>
    <string name="blockedApps">Blocked Apps: 0</string>
    <string name="blockedSites">Blocked Websites: 0</string>
    <!-- Registration -->
    <string name="welcomeText">Welcome to FocusZone!</string>
    <string name="pin" translatable="false">PIN</string>
    <string name="repeatPin">Repeat PIN</string>
    <string name="register">Register</string>
    <string name="enableBio">Enable biometrics</string>
    <string name="disableBio">Disable biometrics</string>
    <string name="registrationInstruction">Insert PIN twice to access application</string>
    <!-- Settings -->
    <string name="settingsTitle">Settings</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="language">Language</string>
    <string name="darkMode">Dark Mode</string>
    <string name="authorization">Authorization</string>
    <string name="disableBlocks">Disable all blocks</string>
    <string name="changeCustomMessage">Change Custom Message</string>
    <string name="about">About</string>
    <string name="biometric_auth_enabled">Biometric authentication enabled</string>
    <string name="biometric_auth_disabled">Biometric authentication disabled</string>
    <!-- Welcome -->
    <string name="welcomeTitle">Welcome to FocusZone!</string>
    <string name="insertPin">Insert PIN</string>
    <string name="login">Log In</string>
    <string name="loginBiometric">Log in with Biometric</string>
    <!-- App Card -->
    <string name="limit" translatable="false">Limit: 1h 30 min</string>
    <string name="edit">Edit</string>
    <!-- Site Card -->
    <string name="siteName">Site address</string>
    <string name="delete">Delete</string>
    <!-- Change pin -->
    <string name="change_pin">Change PIN</string>
    <string name="current_pin">Current PIN</string>
    <string name="new_pin">New PIN</string>
    <string name="confirm_new_pin">Confirm new PIN</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <!-- PIN communicate -->
    <string name="invalid_current_pin">Invalid current PIN</string>
    <string name="pin_empty">PIN cannot be empty</string>
    <string name="pins_do_not_match">PINs do not match</string>
    <string name="pin_invalid">New PIN same as old PIN, please change</string>
    <string name="pin_changed_successfully">PIN changed successfully</string>
    <string name="invalid_pin">Invalid PIN. Try again</string>
    <string name="invalid_pin_format">Invalid PIN format</string>
    <!-- Biometric -->
    <string name="biometric_log_in">Biometric log in</string>
    <string name="biometric_descr">Use fingerprint to log in</string>
    <string name="biometric_auth">Biometric Auth</string>
    <string name="biometic_disabled">Biometric log in disabled</string>
    <string name="biometric_error">Biometric error: %s</string>
    <string name="biometric_unsuccessful">Unsuccessful biometric log in</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="on">On</string>
    <!-- Custom message -->
    <string name="enter_custom_message">Enter custom message</string>
    <string name="change_custom_message">Change custom message</string>
    <string name="message_empty">Message can not be empty</string>
    <string name="message_saved">Message saved</string>
    <!-- Notification Manager -->
    <string name="focuszone_service">FocusZone service</string>
    <string name="descritpion_message">FocusZone monitoring service notifications</string>
    <string name="focuszone_active">FocusZone Active</string>
    <string name="keeping_eye">Keeping eye on your monitored applications!</string>
    <string name="app_blocked_notification">App Blocked</string>
    <string name="app_blocked_description">%1$s has been blocked</string>
    <string name="keeping_eye_site">Keeping eye on sites want to block!</string>
    <string name="site_blocked">Site Blocked</string>
    <string name="site_blocked_description">$s has been blocked</string>
    <!-- Main Activity -->
    <string name="accessibility_enable">Enable Accessibility Service</string>
    <string name="accessibility_mssg">To enable monitoring of app usage, please enable Accessibility for this app. Do you want to open settings?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accessibility_disable">"The app cannot function without Accessibility enabled."</string>
    <!-- Dialog Helper -->
    <string name="attention">Attention</string>
    <string name="continue_str">Continue</string>
    <string name="end">End</string>
    <!-- Other stuff -->
    <string name="search_app">Searching application…</string>
    <string name="accessibility_service_description">Service for monitoring time spent in setted applications by FocusZone</string>
    <string name="app_logo">App Logo</string>
    <string name="previously_blocked_apps">Previously Blocked Apps</string>
    <string name="app_icon">App Icon</string>
    <string name="app_blocked">"App %1$s has been blocked"</string>
    <string name="confirm">Confirm</string>
    <string name="no_limit">No limit</string>

</resources>