<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextCurrentPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/current_pin" />

    <EditText
        android:id="@+id/editTextNewPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/new_pin"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/editTextConfirmNewPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/confirm_new_pin"
        android:layout_marginTop="8dp" />
</LinearLayout>
