<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="38dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_launcher_foreground" />
        <!-- TODO: change app icon        -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appEditName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/appLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>

        <Switch
            android:id="@+id/switchEnableBlock"
            android:layout_width="5dp"
            android:layout_height="58dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/editButtonApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginStart="8dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
